compiler/parser/y.output
Terminals unused in grammar

   UNKNOWN_TOKEN


Grammar

    0 $accept: start $end

    1 start: global_statements

    2 global_statements: global_statement global_statements
    3                  | %empty

    4 local_statements: local_statement local_statements
    5                 | %empty

    6 generic_local_statement: expression ';'
    7                        | conditional_statement
    8                        | loop
    9                        | return_statement ';'

   10 local_statement: block_statement
   11                | generic_local_statement

   12 function_declaration: function_decl_statement '{' local_statements '}'
   13                     | function_decl_statement ';'

   14 function_decl_statement: type identifier '(' arguments_decl ')'

   15 identifier: IDENTIFIER_TOKEN

   16 type: IDENTIFIER_TOKEN

   17 arguments_decl: argument_decl ',' arguments_decl
   18               | argument_decl
   19               | default_arg_decl
   20               | %empty

   21 argument_decl: declaration_expression

   22 default_arg_decl: declaration_constexpr ',' default_arg_decl
   23                 | declaration_constexpr

   24 expression: literal
   25           | '(' expression ')'
   26           | binary_expr
   27           | unary_operation
   28           | assignment
   29           | function_call
   30           | lvalue_expression

   31 literal: INTEGER_TOKEN
   32        | FLOAT_TOKEN

   33 binary_expr: expression '+' expression
   34            | expression '-' expression
   35            | expression '*' expression
   36            | expression '/' expression
   37            | expression '%' expression
   38            | expression AND expression
   39            | expression OR expression
   40            | expression '<' expression
   41            | expression '>' expression
   42            | expression GEQ expression
   43            | expression LEQ expression
   44            | expression NEQ expression
   45            | expression EQ expression

   46 global_statement: function_declaration
   47                 | assignment ';'

   48 lvalue_expression: declaration_expression
   49                  | identifier

   50 declaration_expression: type identifier

   51 declaration_constexpr: declaration_expression '=' literal

   52 unary_operation: lvalue_expression INCREMENT
   53                | INCREMENT lvalue_expression
   54                | lvalue_expression DECREMENT
   55                | DECREMENT lvalue_expression
   56                | '!' expression
   57                | '-' expression

   58 assignment: lvalue_expression '=' expression
   59           | lvalue_expression PLUS_EQ expression
   60           | lvalue_expression MIN_EQ expression
   61           | lvalue_expression MULT_EQ expression
   62           | lvalue_expression DIV_EQ expression
   63           | lvalue_expression REM_EQ expression

   64 function_call: identifier '(' argument_list ')'

   65 argument_list: argument ',' argument_list
   66              | argument
   67              | %empty

   68 argument: expression

   69 conditional_statement: if_statement else_statement
   70                      | if_statement

   71 if_statement: IF_TOKEN '(' expression ')' local_statement

   72 else_statement: ELSE_TOKEN local_statement

   73 return_statement: RETURN_TOKEN
   74                 | RETURN_TOKEN expression

   75 block_statement: '{' local_statements '}'

   76 loop: for_statement
   77     | while_statement

   78 for_statement: FOR_TOKEN '(' expression ';' expression ';' expression ')' loop_init

   79 while_statement: WHILE_TOKEN '(' expression ')' loop_init

   80 loop_init: generic_local_statement
   81          | break_statement
   82          | loop_block

   83 loop_statements: loop_statement loop_statements
   84                | loop_statement

   85 loop_block: '{' loop_statements '}'

   86 loop_statement: local_statement
   87               | break_statement

   88 break_statement: BREAK_TOKEN ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 56
'%' (37) 37
'(' (40) 14 25 64 71 78 79
')' (41) 14 25 64 71 78 79
'*' (42) 35
'+' (43) 33
',' (44) 17 22 65
'-' (45) 34 57
'/' (47) 36
';' (59) 6 9 13 47 78 88
'<' (60) 40
'=' (61) 51 58
'>' (62) 41
'{' (123) 12 75 85
'}' (125) 12 75 85
error (256)
IF_TOKEN (258) 71
ELSE_TOKEN (259) 72
FOR_TOKEN (260) 78
WHILE_TOKEN (261) 79
BREAK_TOKEN (262) 88
RETURN_TOKEN (263) 73 74
GEQ (264) 42
LEQ (265) 43
NEQ (266) 44
EQ (267) 45
AND (268) 38
OR (269) 39
PLUS_EQ (270) 59
MIN_EQ (271) 60
MULT_EQ (272) 61
DIV_EQ (273) 62
REM_EQ (274) 63
INCREMENT (275) 52 53
DECREMENT (276) 54 55
IDENTIFIER_TOKEN (277) 15 16
INTEGER_TOKEN (278) 31
FLOAT_TOKEN (279) 32
UNKNOWN_TOKEN (280)
NO_TOKEN (281)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
start (43)
    on left: 1, on right: 0
global_statements (44)
    on left: 2 3, on right: 1 2
local_statements (45)
    on left: 4 5, on right: 4 12 75
generic_local_statement (46)
    on left: 6 7 8 9, on right: 11 80
local_statement (47)
    on left: 10 11, on right: 4 71 72 86
function_declaration (48)
    on left: 12 13, on right: 46
function_decl_statement (49)
    on left: 14, on right: 12 13
identifier (50)
    on left: 15, on right: 14 49 50 64
type (51)
    on left: 16, on right: 14 50
arguments_decl (52)
    on left: 17 18 19 20, on right: 14 17
argument_decl (53)
    on left: 21, on right: 17 18
default_arg_decl (54)
    on left: 22 23, on right: 19 22
expression (55)
    on left: 24 25 26 27 28 29 30, on right: 6 25 33 34 35 36 37 38
    39 40 41 42 43 44 45 56 57 58 59 60 61 62 63 68 71 74 78 79
literal (56)
    on left: 31 32, on right: 24 51
binary_expr (57)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45, on right: 26
global_statement (58)
    on left: 46 47, on right: 2
lvalue_expression (59)
    on left: 48 49, on right: 30 52 53 54 55 58 59 60 61 62 63
declaration_expression (60)
    on left: 50, on right: 21 48 51
declaration_constexpr (61)
    on left: 51, on right: 22 23
unary_operation (62)
    on left: 52 53 54 55 56 57, on right: 27
assignment (63)
    on left: 58 59 60 61 62 63, on right: 28 47
function_call (64)
    on left: 64, on right: 29
argument_list (65)
    on left: 65 66 67, on right: 64 65
argument (66)
    on left: 68, on right: 65 66
conditional_statement (67)
    on left: 69 70, on right: 7
if_statement (68)
    on left: 71, on right: 69 70
else_statement (69)
    on left: 72, on right: 69
return_statement (70)
    on left: 73 74, on right: 9
block_statement (71)
    on left: 75, on right: 10
loop (72)
    on left: 76 77, on right: 8
for_statement (73)
    on left: 78, on right: 76
while_statement (74)
    on left: 79, on right: 77
loop_init (75)
    on left: 80 81 82, on right: 78 79
loop_statements (76)
    on left: 83 84, on right: 83 85
loop_block (77)
    on left: 85, on right: 82
loop_statement (78)
    on left: 86 87, on right: 83 84
break_statement (79)
    on left: 88, on right: 81 87


State 0

    0 $accept: . start $end

    IDENTIFIER_TOKEN  shift, and go to state 1

    $default  reduce using rule 3 (global_statements)

    start                    go to state 2
    global_statements        go to state 3
    function_declaration     go to state 4
    function_decl_statement  go to state 5
    identifier               go to state 6
    type                     go to state 7
    global_statement         go to state 8
    lvalue_expression        go to state 9
    declaration_expression   go to state 10
    assignment               go to state 11


State 1

   15 identifier: IDENTIFIER_TOKEN .
   16 type: IDENTIFIER_TOKEN .

    IDENTIFIER_TOKEN  reduce using rule 16 (type)
    $default          reduce using rule 15 (identifier)


State 2

    0 $accept: start . $end

    $end  shift, and go to state 12


State 3

    1 start: global_statements .

    $default  reduce using rule 1 (start)


State 4

   46 global_statement: function_declaration .

    $default  reduce using rule 46 (global_statement)


State 5

   12 function_declaration: function_decl_statement . '{' local_statements '}'
   13                     | function_decl_statement . ';'

    ';'  shift, and go to state 13
    '{'  shift, and go to state 14


State 6

   49 lvalue_expression: identifier .

    $default  reduce using rule 49 (lvalue_expression)


State 7

   14 function_decl_statement: type . identifier '(' arguments_decl ')'
   50 declaration_expression: type . identifier

    IDENTIFIER_TOKEN  shift, and go to state 15

    identifier  go to state 16


State 8

    2 global_statements: global_statement . global_statements

    IDENTIFIER_TOKEN  shift, and go to state 1

    $default  reduce using rule 3 (global_statements)

    global_statements        go to state 17
    function_declaration     go to state 4
    function_decl_statement  go to state 5
    identifier               go to state 6
    type                     go to state 7
    global_statement         go to state 8
    lvalue_expression        go to state 9
    declaration_expression   go to state 10
    assignment               go to state 11


State 9

   58 assignment: lvalue_expression . '=' expression
   59           | lvalue_expression . PLUS_EQ expression
   60           | lvalue_expression . MIN_EQ expression
   61           | lvalue_expression . MULT_EQ expression
   62           | lvalue_expression . DIV_EQ expression
   63           | lvalue_expression . REM_EQ expression

    PLUS_EQ  shift, and go to state 18
    MIN_EQ   shift, and go to state 19
    MULT_EQ  shift, and go to state 20
    DIV_EQ   shift, and go to state 21
    REM_EQ   shift, and go to state 22
    '='      shift, and go to state 23


State 10

   48 lvalue_expression: declaration_expression .

    $default  reduce using rule 48 (lvalue_expression)


State 11

   47 global_statement: assignment . ';'

    ';'  shift, and go to state 24


State 12

    0 $accept: start $end .

    $default  accept


State 13

   13 function_declaration: function_decl_statement ';' .

    $default  reduce using rule 13 (function_declaration)


State 14

   12 function_declaration: function_decl_statement '{' . local_statements '}'

    IF_TOKEN          shift, and go to state 25
    FOR_TOKEN         shift, and go to state 26
    WHILE_TOKEN       shift, and go to state 27
    RETURN_TOKEN      shift, and go to state 28
    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '{'               shift, and go to state 35
    '('               shift, and go to state 36

    $default  reduce using rule 5 (local_statements)

    local_statements         go to state 37
    generic_local_statement  go to state 38
    local_statement          go to state 39
    identifier               go to state 40
    type                     go to state 41
    expression               go to state 42
    literal                  go to state 43
    binary_expr              go to state 44
    lvalue_expression        go to state 45
    declaration_expression   go to state 10
    unary_operation          go to state 46
    assignment               go to state 47
    function_call            go to state 48
    conditional_statement    go to state 49
    if_statement             go to state 50
    return_statement         go to state 51
    block_statement          go to state 52
    loop                     go to state 53
    for_statement            go to state 54
    while_statement          go to state 55


State 15

   15 identifier: IDENTIFIER_TOKEN .

    $default  reduce using rule 15 (identifier)


State 16

   14 function_decl_statement: type identifier . '(' arguments_decl ')'
   50 declaration_expression: type identifier .

    '('  shift, and go to state 56

    $default  reduce using rule 50 (declaration_expression)


State 17

    2 global_statements: global_statement global_statements .

    $default  reduce using rule 2 (global_statements)


State 18

   59 assignment: lvalue_expression PLUS_EQ . expression

    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '('               shift, and go to state 36

    identifier              go to state 40
    type                    go to state 41
    expression              go to state 57
    literal                 go to state 43
    binary_expr             go to state 44
    lvalue_expression       go to state 45
    declaration_expression  go to state 10
    unary_operation         go to state 46
    assignment              go to state 47
    function_call           go to state 48


State 19

   60 assignment: lvalue_expression MIN_EQ . expression

    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '('               shift, and go to state 36

    identifier              go to state 40
    type                    go to state 41
    expression              go to state 58
    literal                 go to state 43
    binary_expr             go to state 44
    lvalue_expression       go to state 45
    declaration_expression  go to state 10
    unary_operation         go to state 46
    assignment              go to state 47
    function_call           go to state 48


State 20

   61 assignment: lvalue_expression MULT_EQ . expression

    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '('               shift, and go to state 36

    identifier              go to state 40
    type                    go to state 41
    expression              go to state 59
    literal                 go to state 43
    binary_expr             go to state 44
    lvalue_expression       go to state 45
    declaration_expression  go to state 10
    unary_operation         go to state 46
    assignment              go to state 47
    function_call           go to state 48


State 21

   62 assignment: lvalue_expression DIV_EQ . expression

    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '('               shift, and go to state 36

    identifier              go to state 40
    type                    go to state 41
    expression              go to state 60
    literal                 go to state 43
    binary_expr             go to state 44
    lvalue_expression       go to state 45
    declaration_expression  go to state 10
    unary_operation         go to state 46
    assignment              go to state 47
    function_call           go to state 48


State 22

   63 assignment: lvalue_expression REM_EQ . expression

    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '('               shift, and go to state 36

    identifier              go to state 40
    type                    go to state 41
    expression              go to state 61
    literal                 go to state 43
    binary_expr             go to state 44
    lvalue_expression       go to state 45
    declaration_expression  go to state 10
    unary_operation         go to state 46
    assignment              go to state 47
    function_call           go to state 48


State 23

   58 assignment: lvalue_expression '=' . expression

    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '('               shift, and go to state 36

    identifier              go to state 40
    type                    go to state 41
    expression              go to state 62
    literal                 go to state 43
    binary_expr             go to state 44
    lvalue_expression       go to state 45
    declaration_expression  go to state 10
    unary_operation         go to state 46
    assignment              go to state 47
    function_call           go to state 48


State 24

   47 global_statement: assignment ';' .

    $default  reduce using rule 47 (global_statement)


State 25

   71 if_statement: IF_TOKEN . '(' expression ')' local_statement

    '('  shift, and go to state 63


State 26

   78 for_statement: FOR_TOKEN . '(' expression ';' expression ';' expression ')' loop_init

    '('  shift, and go to state 64


State 27

   79 while_statement: WHILE_TOKEN . '(' expression ')' loop_init

    '('  shift, and go to state 65


State 28

   73 return_statement: RETURN_TOKEN .
   74                 | RETURN_TOKEN . expression

    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '('               shift, and go to state 36

    $default  reduce using rule 73 (return_statement)

    identifier              go to state 40
    type                    go to state 41
    expression              go to state 66
    literal                 go to state 43
    binary_expr             go to state 44
    lvalue_expression       go to state 45
    declaration_expression  go to state 10
    unary_operation         go to state 46
    assignment              go to state 47
    function_call           go to state 48


State 29

   53 unary_operation: INCREMENT . lvalue_expression

    IDENTIFIER_TOKEN  shift, and go to state 1

    identifier              go to state 6
    type                    go to state 41
    lvalue_expression       go to state 67
    declaration_expression  go to state 10


State 30

   55 unary_operation: DECREMENT . lvalue_expression

    IDENTIFIER_TOKEN  shift, and go to state 1

    identifier              go to state 6
    type                    go to state 41
    lvalue_expression       go to state 68
    declaration_expression  go to state 10


State 31

   31 literal: INTEGER_TOKEN .

    $default  reduce using rule 31 (literal)


State 32

   32 literal: FLOAT_TOKEN .

    $default  reduce using rule 32 (literal)


State 33

   57 unary_operation: '-' . expression

    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '('               shift, and go to state 36

    identifier              go to state 40
    type                    go to state 41
    expression              go to state 69
    literal                 go to state 43
    binary_expr             go to state 44
    lvalue_expression       go to state 45
    declaration_expression  go to state 10
    unary_operation         go to state 46
    assignment              go to state 47
    function_call           go to state 48


State 34

   56 unary_operation: '!' . expression

    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '('               shift, and go to state 36

    identifier              go to state 40
    type                    go to state 41
    expression              go to state 70
    literal                 go to state 43
    binary_expr             go to state 44
    lvalue_expression       go to state 45
    declaration_expression  go to state 10
    unary_operation         go to state 46
    assignment              go to state 47
    function_call           go to state 48


State 35

   75 block_statement: '{' . local_statements '}'

    IF_TOKEN          shift, and go to state 25
    FOR_TOKEN         shift, and go to state 26
    WHILE_TOKEN       shift, and go to state 27
    RETURN_TOKEN      shift, and go to state 28
    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '{'               shift, and go to state 35
    '('               shift, and go to state 36

    $default  reduce using rule 5 (local_statements)

    local_statements         go to state 71
    generic_local_statement  go to state 38
    local_statement          go to state 39
    identifier               go to state 40
    type                     go to state 41
    expression               go to state 42
    literal                  go to state 43
    binary_expr              go to state 44
    lvalue_expression        go to state 45
    declaration_expression   go to state 10
    unary_operation          go to state 46
    assignment               go to state 47
    function_call            go to state 48
    conditional_statement    go to state 49
    if_statement             go to state 50
    return_statement         go to state 51
    block_statement          go to state 52
    loop                     go to state 53
    for_statement            go to state 54
    while_statement          go to state 55


State 36

   25 expression: '(' . expression ')'

    INCREMENT         shift, and go to state 29
    DECREMENT         shift, and go to state 30
    IDENTIFIER_TOKEN  shift, and go to state 1
    INTEGER_TOKEN     shift, and go to state 31
    FLOAT_TOKEN       shift, and go to state 32
    '-'               shift, and go to state 33
    '!'               shift, and go to state 34
    '('               shift, and go to state 36

    identifier              go to state 40
    type                    go to state 41
    expression              go to state 72
    literal                 go to state 43
    binary_expr             go to state 44
    lvalue_expression       go to state 45
    declaration_expression  go to state 10
    unary_operation         go to state 46
    assignment              go to state 47
    function_call           go to state 48


State 37

   12 function_declaration: function_decl_statement '{' local_statements . '}'

    '}'  shift, and go to state 73


State 38

   11 local_statement: generic_local_statement .

    $default  reduce using rule 11 (local_statement)


State 39

    4 local_statements: local_statement . local_statements
